重置全局样式

--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -1,8 +1,8 @@
+// 重置全局样式
+
 html,
 body {
   width: 100%;
-  // min-width: 1344px;
-  // max-width: 1920px;
   height: 100%;
   margin: 0 auto;
   padding: 0;
@@ -11,19 +11,11 @@ body {
     Helvetica Neue ',Helvetica,' PingFang SC ',' Hiragino Sans GB
       ',SimSun,sans-serif';
 }
-ul,
-li,
-p {
-  margin: 0;
-  padding: 0;
-}
-ul {
-  list-style: none;
-}
 a {
   color: #409eff;
   text-decoration: none;
 }
+
 /**设置滚动条的样式**/
 ::-webkit-scrollbar {
   width: 6px;
