--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -31,3 +31,10 @@ a {
   background: #ccc;
   margin-right: 10px;
 }
+
+/* 组件覆盖 */
+
+// 内容区不留白
+.el-notification__content{
+  margin: 0px !important;
+}
