--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -15,6 +15,9 @@ a {
   color: #409eff;
   text-decoration: none;
 }
+pre {
+  white-space: pre-wrap !important;
+}
 
 /**设置滚动条的样式**/
 ::-webkit-scrollbar {
