--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -41,3 +41,41 @@ pre {
 .el-notification__content{
   margin: 0px !important;
 }
+
+// 引导页样式
+.driver-popover-custom-class {
+  background-color: @fc-warning !important;
+  .driver-popover-progress-text {
+    color: @c-black;
+  }
+  .driver-popover-arrow {
+    border: 5px solid @fc-warning;
+  }
+  .driver-popover-close-btn{
+    color: @c-black;
+  }
+  .driver-popover-arrow-side-right {
+    right: 100%;
+    border-left-color: transparent;
+    border-bottom-color: transparent;
+    border-top-color: transparent;
+  }
+  .driver-popover-arrow-side-left {
+    left: 100%;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-top-color: transparent;
+  }
+  .driver-popover-arrow-side-top {
+    top: 100%;
+    border-left-color: transparent;
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+  }
+  .driver-popover-arrow-side-bottom {
+    bottom: 100%;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    border-top-color: transparent;
+  }
+}
